Bug 98981 - Mailmerge send QueryBox without description
Summary: Mailmerge send QueryBox without description
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords: bibisected, bisected, regression
: 99175 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-30 13:39 UTC by Oliver Specht (CIB)
Modified: 2016-10-25 19:01 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Empty query box (26.21 KB, image/jpeg)
2016-03-30 13:39 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2016-03-30 13:39:29 UTC
Created attachment 123956 [details]
Empty query box

- Start and finish the mail merge wizard 
- Press the "Send E-MailMessages" button in the mail merge toolbar
- Press "SendDocuments"
-> a query box appears that should ask you if you want to configure your e-Mail settings - but it has no text.
Comment 1 raal 2016-03-30 17:10:30 UTC
I can confirm with Version: 5.2.0.0.alpha0+
Build ID: ef34535ceb60d7d63b8d8671e4c6e9e43ffbd17d
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-03-27_09:53:05
Comment 2 raal 2016-04-01 09:46:12 UTC
This seems to have begun at the below commit.
Adding Cc: to Jan Holesovsky; Could you possibly take a look at this one? Thanks

There are only 'skip'ped commits left to test.
The first bad commit could be any of: f250c601c8e04531cb61aceda2748e7ed2449508 26d01cabf9fd7d9b322c0399cb9b1df22cbf16f3
We cannot bisect more!

commit f250c601c8e04531cb61aceda2748e7ed2449508
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Mar 19 13:30:09 2016 -0700
    source ba0796b331247b27886384377c480e413c3ee83d


commit 26d01cabf9fd7d9b322c0399cb9b1df22cbf16f3
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Mar 19 13:34:33 2016 -0700
    source e770de4fdb74ac5db5d4fbfcf4856ea08e7403d7


author	Jan Holesovsky <kendy@collabora.com>	2015-12-23 16:43:14 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-03-18 08:13:56 (GMT)
commit ba0796b331247b27886384377c480e413c3ee83d (patch)
tree f0b6a5adb18a6805561dbc8a0bc8cf38b7e6d03a
parent 6b355901a7e7a1fd8710e743621ad655068a5817 (diff)
mailmerge: Killed the 'Save, print or send' page.


author	Jan Holesovsky <kendy@collabora.com>	2015-12-23 17:48:47 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-03-18 08:13:56 (GMT)
commit e770de4fdb74ac5db5d4fbfcf4856ea08e7403d7 (patch)
tree 076409c7a4566133518cd67aae2188f736765924
parent ba0796b331247b27886384377c480e413c3ee83d (diff)
mailmerge: Create toolbar buttons for the Save/Print/Email dialogs.
Comment 3 Oliver Specht (CIB) 2016-04-11 08:00:41 UTC
*** Bug 99175 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2016-05-11 14:33:10 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c4af0759048c38dce6f6b64cf50b40341032b023

tdf#98981 added initialization of e-Mail configuration QueryBox

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.