tdf#98981 added initialization of e-Mail configuration QueryBox

Change-Id: I96a742439825ae422bc345294c2964159d168d3f
Reviewed-on: https://gerrit.libreoffice.org/24650
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>